--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Euclid Documentation</title>
+  <meta charset="UTF-8">
+  <title>Euclid Modules Developed by ENSCI</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background-color: #f9fafc;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2em;
+      margin-bottom: 30px;
+      color: #2c3e50;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    li {
+      margin: 10px 0;
+    }
+    a {
+      text-decoration: none;
+      color: #0066cc;
+      font-weight: bold;
+      transition: color 0.2s ease;
+    }
+    a:hover {
+      color: #004080;
+    }
+  </style>
 </head>
 <body>
+  <h1>Euclid Modules Developed by ENSCI</h1>
 
+  <ul>
+    <li><a href="decontamination">SIR_SpectraDecontamination</a></li>
+    <li><a href="detector_scaling_apply">SIR_ApplyDetectorScaling</a></li>
+  </ul>
 </body>
 </html>
+
