Added detector scaling cal link and placeholder.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <ul>
     <li><a href="decontamination">SIR_SpectraDecontamination</a></li>
     <li><a href="detector_scaling_apply">SIR_ApplyDetectorScaling</a></li>
+    <li><a href="detector_scaling_calibration">SIR_DetectorScalingCalibration</a></li>
   </ul>
 </body>
 </html>
