nonlinearity added to index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <li><a href="decontamination">SIR_SpectraDecontamination</a></li>
     <li><a href="detector_scaling_apply">SIR_ApplyDetectorScaling</a></li>
     <li><a href="detector_scaling_calibration">SIR_DetectorScalingCalibration</a></li>
+    <li><a href="nonlinearity">NIR_NonLinearitySaturation</a></li>
   </ul>
 </body>
 </html>
