Relative Flux docs

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <li><a href="detector_scaling_apply">SIR_ApplyDetectorScaling</a></li>
     <li><a href="detector_scaling_calibration">SIR_DetectorScalingCalibration</a></li>
     <li><a href="nonlinearity">NIR_NonLinearitySaturation</a></li>
+    <li><a href="SIR_RelFluxModel">SIR_RelativeFluxModel</a></li>
   </ul>
 </body>
 </html>
