Add masterdark to index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <li><a href="detector_scaling_calibration">SIR_DetectorScalingCalibration</a></li>
     <li><a href="nonlinearity">NIR_NonLinearitySaturation</a></li>
     <li><a href="SIR_RelFluxModel">SIR_RelativeFluxModel</a></li>
+    <li><a href="masterdark">NIR_DarkBiasSubtraction</a></li>
   </ul>
 </body>
 </html>
