--- a/detector_scaling_apply/SIR_DetectorScaling.html
+++ b/detector_scaling_apply/SIR_DetectorScaling.html
@@ -131,8 +131,8 @@ Author: nrstickley</p>
 <dd><p>Bases: <code class="xref py py-class docutils literal notranslate"><span class="pre">object</span></code></p>
 <p>Class to handle application of small scale flat</p>
 <p>Details:</p>
-<p>Correcs the input spectroscopic image, for each de
-tector, by dividing it with the corresponding 2D calibration map</p>
+<p>Corrects the input spectroscopic image, for each detector,
+by dividing it with the corresponding 2D calibration map.</p>
 <p>Sets all the pixels, with numpy inf values, with NaNs, flags them
 as INVALID and updates the mask layer accordingly.</p>
 <dl class="py attribute">
