--- a/detector_scaling_apply/_modules/SIR_DetectorScaling/SmallScaleFlatCreator.html
+++ b/detector_scaling_apply/_modules/SIR_DetectorScaling/SmallScaleFlatCreator.html
@@ -104,13 +104,14 @@
 
 <span class="sd">    Details:</span>
 
-<span class="sd">    Correcs the input spectroscopic image, for each de</span>
-<span class="sd">    tector, by dividing it with the corresponding 2D calibration map</span>
+<span class="sd">    Corrects the input spectroscopic image, for each detector, </span>
+<span class="sd">    by dividing it with the corresponding 2D calibration map.</span>
 
 <span class="sd">    Sets all the pixels, with numpy inf values, with NaNs, flags them </span>
 <span class="sd">    as INVALID and updates the mask layer accordingly. </span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
+    
     <span class="n">sir_invalid_bitmask</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">uint32</span><span class="p">(</span><span class="mi">2</span><span class="o">**</span><span class="n">EUC_SIR_MASK_DICT</span><span class="p">[</span><span class="s1">&#39;INVALID&#39;</span><span class="p">])</span>
 
 
