--- a/detector_scaling_calibration/search.html
+++ b/detector_scaling_calibration/search.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Search &mdash; SIR_DetectorScaling August-2025 documentation</title>
+  <title>Search &mdash; SIR_DetectorScalingCalibration August-2025 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
     
@@ -26,7 +26,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="index.html" class="icon icon-home"> SIR_DetectorScaling
+            <a href="index.html" class="icon icon-home"> SIR_DetectorScalingCalibration
           </a>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="#" method="get">
@@ -47,7 +47,7 @@
 
     <section data-toggle="wy-nav-shift" class="wy-nav-content-wrap"><nav class="wy-nav-top" aria-label="Mobile navigation menu" >
           <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-          <a href="index.html">SIR_DetectorScaling</a>
+          <a href="index.html">SIR_DetectorScalingCalibration</a>
       </nav>
 
       <div class="wy-nav-content">
