--- a/detector_scaling_calibration/genindex.html
+++ b/detector_scaling_calibration/genindex.html
@@ -65,8 +65,94 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#D"><strong>D</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#W"><strong>W</strong></a>
  
 </div>
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.CreateDetectorScalingFile.defineSpecificProgramOptions">defineSpecificProgramOptions() (in module SIR_DetectorScalingCalibration.CreateDetectorScalingFile)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker">FlatMaker (class in SIR_DetectorScalingCalibration.FlatMaker)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.load_grism_transmission_curves">load_grism_transmission_curves() (FlatMaker method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.CreateDetectorScalingFile.mainMethod">mainMethod() (in module SIR_DetectorScalingCalibration.CreateDetectorScalingFile)</a>
+</li>
+      <li>
+    module
+
+      <ul>
+        <li><a href="SIR_DetectorScalingCalibration.html#module-SIR_DetectorScalingCalibration">SIR_DetectorScalingCalibration</a>
+</li>
+        <li><a href="SIR_DetectorScalingCalibration.html#module-SIR_DetectorScalingCalibration.CreateDetectorScalingFile">SIR_DetectorScalingCalibration.CreateDetectorScalingFile</a>
+</li>
+        <li><a href="SIR_DetectorScalingCalibration.html#module-SIR_DetectorScalingCalibration.FlatMaker">SIR_DetectorScalingCalibration.FlatMaker</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    SIR_DetectorScalingCalibration
+
+      <ul>
+        <li><a href="SIR_DetectorScalingCalibration.html#module-SIR_DetectorScalingCalibration">module</a>
+</li>
+      </ul></li>
+      <li>
+    SIR_DetectorScalingCalibration.CreateDetectorScalingFile
+
+      <ul>
+        <li><a href="SIR_DetectorScalingCalibration.html#module-SIR_DetectorScalingCalibration.CreateDetectorScalingFile">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    SIR_DetectorScalingCalibration.FlatMaker
+
+      <ul>
+        <li><a href="SIR_DetectorScalingCalibration.html#module-SIR_DetectorScalingCalibration.FlatMaker">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="W">W</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.write_fits">write_fits() (FlatMaker method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
            </div>
