--- a/detector_scaling_calibration/SIR_DetectorScalingCalibration.html
+++ b/detector_scaling_calibration/SIR_DetectorScalingCalibration.html
@@ -112,10 +112,10 @@ specific to this program</p>
 This method is the entry point to the program. In this sense, it is
 similar to a main and hence called mainMethod().</p>
 <p>Some of its major functionalities are,</p>
-<p>From the ArgumentParser,
-1. Define mission database (MDB) XML file. From MDB file,
-a) Define NISP grism tranmission curve file path.
-b) Define quantum efficiency (QE) files list and their paths.</p>
+<p>From the ArgumentParser,</p>
+<p>1. Define mission database (MDB) XML file. From MDB file,
+1. a) Define NISP grism tranmission curve file path.
+1. b) Define quantum efficiency (QE) files list and their corresponding paths.</p>
 <ol class="arabic simple" start="2">
 <li><p>Define RGS and BGS grism-specific parameters.</p></li>
 <li><p>Create FlatMaker object.</p></li>
