--- a/detector_scaling_calibration/_modules/SIR_DetectorScalingCalibration/CreateDetectorScalingFile.html
+++ b/detector_scaling_calibration/_modules/SIR_DetectorScalingCalibration/CreateDetectorScalingFile.html
@@ -156,8 +156,10 @@
 <span class="sd">    From the ArgumentParser,</span>
 
 <span class="sd">    1. Define mission database (MDB) XML file. From MDB file,</span>
-<span class="sd">    1. a) Define NISP grism tranmission curve file path.</span>
-<span class="sd">    1. b) Define quantum efficiency (QE) files list and their corresponding paths.</span>
+<span class="sd">    </span>
+<span class="sd">    a) Define NISP grism tranmission curve file path.</span>
+<span class="sd">    </span>
+<span class="sd">    b) Define quantum efficiency (QE) files list and their corresponding paths.</span>
 
 <span class="sd">    2. Define RGS and BGS grism-specific parameters.</span>
 
