Add Bad Pixel html documentation

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <li><a href="nonlinearity">NIR_NonLinearitySaturation</a></li>
     <li><a href="SIR_RelFluxModel">SIR_RelativeFluxModel</a></li>
     <li><a href="masterdark">NIR_DarkBiasSubtraction</a></li>
+    <li><a href="badpixel">NIR_BadPixelMasking</a></li>
   </ul>
 </body>
 </html>
