--- a/detector_scaling_calibration/_modules/SIR_DetectorScalingCalibration/FlatMaker.html
+++ b/detector_scaling_calibration/_modules/SIR_DetectorScalingCalibration/FlatMaker.html
@@ -146,14 +146,18 @@
 
 
     <span class="k">def</span><span class="w"> </span><span class="nf">_load_wavelengths</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">qe_file_path</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot; loads full range of wavelengths from input QE maps</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Load the wavelength grid from a QE FITS cube.</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
-<span class="sd">  </span>
 <span class="sd">        qe_file_path : str</span>
-<span class="sd">            full path of QE input FITS file</span>
-<span class="sd"> </span>
+<span class="sd">            Full path to the QE FITS file.</span>
+
+<span class="sd">        Notes</span>
+<span class="sd">        -----</span>
+<span class="sd">        Reads the &#39;WAVELEN&#39; header from each image HDU (skipping the</span>
+<span class="sd">        primary HDU) and populates `self._wave` with the wavelength grid.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="k">with</span> <span class="n">fits</span><span class="o">.</span><span class="n">open</span><span class="p">(</span><span class="n">qe_file_path</span><span class="p">)</span> <span class="k">as</span> <span class="n">hdu</span><span class="p">:</span>
@@ -164,30 +168,26 @@
     
     <span class="k">def</span><span class="w"> </span><span class="nf">_get_wavelength_range</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">wavelengths</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> 
                               <span class="n">transmissions</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">]:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Identifies useful range from the full range of wavelengths</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Determine indices on the internal wavelength grid where transmission is significant.</span>
 
-<span class="sd">        From input transmission curve, covering the full wavelength </span>
-<span class="sd">        range where throughput is &gt; 10% of max. value</span>
+<span class="sd">        Selects the wavelength interval on the input transmission curve where</span>
+<span class="sd">        throughput exceeds 10% of its maximum, then maps that interval onto</span>
+<span class="sd">        `self._wave` and returns the inclusive start/end indices.</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
-
-<span class="sd">        wavelengths : numpy array of floats</span>
-<span class="sd">            contains complete set of wavelengths available in input</span>
-<span class="sd">            QE map for a grism</span>
-
-<span class="sd">        transmissions : numpy array of floats</span>
-<span class="sd">            contains complete set of transmission values available in </span>
-<span class="sd">            input QE map for a grism</span>
+<span class="sd">        wavelengths : np.ndarray</span>
+<span class="sd">            Wavelengths for the provided transmission curve.</span>
+<span class="sd">        transmissions : np.ndarray</span>
+<span class="sd">            Transmission values corresponding to `wavelengths`.</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
-
 <span class="sd">        index_start : int</span>
-<span class="sd">            starting index for wavelengths</span>
-
+<span class="sd">            Inclusive start index into `self._wave` for the selected interval.</span>
 <span class="sd">        index_end : int</span>
-<span class="sd">            ending index for wavelengths</span>
+<span class="sd">            Inclusive end index into `self._wave` for the selected interval.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="n">transmissions_cutoff</span> <span class="o">=</span> <span class="mf">0.1</span> <span class="o">*</span> <span class="n">transmissions</span><span class="o">.</span><span class="n">max</span><span class="p">()</span>
@@ -206,19 +206,24 @@
 <div class="viewcode-block" id="FlatMaker.load_grism_transmission_curves">
 <a class="viewcode-back" href="../../SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.load_grism_transmission_curves">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">load_grism_transmission_curves</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">grism_file_path</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot; Interpolates transmission values from input grism curves</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Interpolate NISP grism transmission curves and compute per-grism weights.</span>
 
-<span class="sd">        Reads in NISP grism transmission data for various wavelengths</span>
-<span class="sd">        from input FITS file. Subsequently, interpolates that data </span>
-<span class="sd">        for `self.wavelengths` points, Ends by passing the transmission </span>
-<span class="sd">        values to `_calculate_weights()`</span>
+<span class="sd">        Reads transmission data from the FITS extensions specified in</span>
+<span class="sd">        `grism_parameters[&#39;hdu_extn&#39;]`. </span>
+<span class="sd">        </span>
+<span class="sd">        Determines the useful wavelength interval via `_get_wavelength_range()` </span>
+<span class="sd">        (throughput &gt; 10% of max), maps that interval onto `self._wave`, </span>
+<span class="sd">        interpolates transmission to this internal grid using cubic interpolation, </span>
+<span class="sd">        and computes weights with `_calculate_weights()` using the corresponding `alpha`.</span>
+<span class="sd">        </span>
+<span class="sd">        Populates `self._wavelength_ranges[grism]`, `self._wavelengths[grism]`,</span>
+<span class="sd">        and `self._weights[grism]` for each grism.</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
-
 <span class="sd">        grism_file_path : str</span>
-<span class="sd">            full path for NISP Grism Curve FITS file</span>
-
+<span class="sd">            Full path to the NISP grism transmission FITS file.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
 
         <span class="k">with</span> <span class="n">fits</span><span class="o">.</span><span class="n">open</span><span class="p">(</span><span class="n">grism_file_path</span><span class="p">)</span> <span class="k">as</span> <span class="n">hdu</span><span class="p">:</span>
@@ -246,33 +251,29 @@
     <span class="k">def</span><span class="w"> </span><span class="nf">_calculate_weights</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">wavelengths</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> 
                            <span class="n">transmissions</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> 
                            <span class="n">alpha</span><span class="p">:</span> <span class="nb">float</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot; Calculates weights for QE transmissions for each wavelength</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
+<span class="sd">        Compute normalized weights per wavelength based on zodiacal-light photon flux.</span>
 
 <span class="sd">        Parameters</span>
 <span class="sd">        ----------</span>
-
-<span class="sd">        wavelengths : numpy array of floats</span>
-<span class="sd">            requisite wavelength range for a grism</span>
-
-<span class="sd">        transmissions : numpy array of floats</span>
-<span class="sd">            transmission values for aforementioned wavelengths</span>
-
+<span class="sd">        wavelengths : np.ndarray</span>
+<span class="sd">            Wavelengths on the internal grid for the selected grism.</span>
+<span class="sd">        transmissions : np.ndarray</span>
+<span class="sd">            Transmission values corresponding to `wavelengths`.</span>
 <span class="sd">        alpha : float</span>
 <span class="sd">            a constant (see Notes below for more)</span>
 
 <span class="sd">        Returns</span>
 <span class="sd">        -------</span>
-
-<span class="sd">        weights : numpy array of floats</span>
-<span class="sd">            weights calculated for corresponding input wavelengths</span>
+<span class="sd">        weights : np.ndarray</span>
+<span class="sd">            Normalized weights (sum to 1) for each wavelength.</span>
 
 <span class="sd">        Notes</span>
 <span class="sd">        -----</span>
 
-<span class="sd">        alpha used to estimate the following,</span>
-<span class="sd">        Median zody spectrum intensity I_nu ~ lambda^alpha</span>
-
-<span class="sd">        Delta nu also varies from 2.4 at 12500 to 1.12 at the red end</span>
+<span class="sd">        - Uses `alpha` to model median zodiacal spectrum intensity: I_nu ~ lambda^alpha.</span>
+<span class="sd">        - Delta nu varies with wavelength; approximately 2.4 at 12,500, decreasing to </span>
+<span class="sd">        ~1.12 toward the red end.</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
 
