--- a/detector_scaling_apply/_modules/SIR_DetectorScaling/SmallScaleFlatCreator.html
+++ b/detector_scaling_apply/_modules/SIR_DetectorScaling/SmallScaleFlatCreator.html
@@ -181,7 +181,7 @@
 
 <span class="sd">        output_fits: str</span>
 <span class="sd">            The flat-fielded output FITS filename, w.r.t workdir. User may </span>
-<span class="sd">            choose to append a directory in front of the FITS filename.</span>
+<span class="sd">            choose to append a directory in front of the FITS filename...</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">_exposure</span><span class="o">.</span><span class="n">writeFits</span><span class="p">(</span><span class="n">output_fits</span><span class="p">)</span></div>
 </div>
