--- a/detector_scaling_calibration/modules.html
+++ b/detector_scaling_calibration/modules.html
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="SIR_DetectorScalingCalibration package" href="SIR_DetectorScalingCalibration.html" />
-    <link rel="prev" title="Science goals for SIR Detector Scaling" href="index.html" /> 
+    <link rel="prev" title="SScience goals for SIR Detector Scaling" href="index.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -98,7 +98,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="index.html" class="btn btn-neutral float-left" title="Science goals for SIR Detector Scaling" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="index.html" class="btn btn-neutral float-left" title="SScience goals for SIR Detector Scaling" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="SIR_DetectorScalingCalibration.html" class="btn btn-neutral float-right" title="SIR_DetectorScalingCalibration package" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
